Update to current snapshot

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  kasync-0.3.0.tar.xz: f8b92ad492743fbc5d7e7473cedd4c23edcc546c
+  kasync-master.tar.bz2: 817d4d9629629b1b8a166b7edbfa74df16a043a3
